Update to v2.14 (#11)
* Stop Active Scan's Analyser

Stop the `HostProcess` to stop the `Analyser`, otherwise it would not
stop until finished.

Signed-off-by: thc202 <thc202@gmail.com>

* Remove build condition no longer needed

Remove condition that configured the installer tasks depending on the
Java version, no longer required now that ZAP is built with Java 11.

Signed-off-by: thc202 <thc202@gmail.com>

* Include whole `org.zaproxy` package in log config

For convenience when debugging include the whole package by default as
newer add-ons are under `org.zaproxy.addon` not `org.zaproxy.zap`.
Pointed out by @psiinon in IRC channel.

Signed-off-by: thc202 <thc202@gmail.com>

* Update localized resources

Update resources from Crowdin.

Signed-off-by: zapbot <12745184+zapbot@users.noreply.github.com>

* Push Docker images to GHCR

Signed-off-by: ricekot <github@ricekot.com>

* Update localized resources

Update resources from Crowdin.

Signed-off-by: zapbot <12745184+zapbot@users.noreply.github.com>

* Update Docker release workflows

- Use the `GITHUB_TOKEN` to authenticate with GHCR.
- Add annotations at the image index level.

Signed-off-by: ricekot <github@ricekot.com>

* Fix Docker integration tests workflow

Signed-off-by: ricekot <github@ricekot.com>

* Update Docker release workflows

- Disable [provenance attestations](https://docs.docker.com/build/attestations/slsa-provenance/).
- Use a Docker secret for the Webswing URL.

Signed-off-by: ricekot <github@ricekot.com>

* Fix Dockerfiles

The RUN command was not correct in the Dockerfiles.

Signed-off-by: ricekot <github@ricekot.com>

* Fix Docker workflow job for releasing bare image

Signed-off-by: ricekot <github@ricekot.com>

* Update localized resources

Update resources from Crowdin.

Signed-off-by: zapbot <12745184+zapbot@users.noreply.github.com>

* Show alert ref in the Alert panel

Allow the user to know what ref the alert has, if any.

Signed-off-by: thc202 <thc202@gmail.com>

* Update gradle-laun