@@ -23,8 +23,6 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.MalformedURLException;
-import java.net.URI;
-import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
@@ -46,9 +44,9 @@ import java.util.zip.ZipException;
 import java.util.zip.ZipFile;
 import org.apache.commons.configuration.SubnodeConfiguration;
 import org.apache.commons.io.IOUtils;
-import org.apache.commons.lang3.ArrayUtils;
-import org.apache.commons.lang3.StringUtils;
-import org.apache.commons.lang3.SystemUtils;
+import org.apache.commons.lang.ArrayUtils;
+import org.apache.commons.lang.StringUtils;
+import org.apache.commons.lang.SystemUtils;
 import org.apache.commons.lang3.exception.ExceptionUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -306,6 +304,8 @@ public class AddOn {
     private List<AbstractPlugin> loadedAscanrules = Collections.emptyList();
     private boolean loadedAscanRulesSet;
     private List<String> pscanrules = Collections.emptyList();
+    private List<PluginPassiveScanner> loadedPscanrules = Collections.emptyList();
+    private boolean loadedPscanRulesSet;
     private List<String> files = Collections.emptyList();
     private List<Lib> libs = Collections.emptyList();
 
@@ -579,11 +579,7 @@ public class AddOn {
         this.semVer = addOnData.getSemVer();
         this.status = AddOn.Status.valueOf(addOnData.getStatus());
         this.changes = addOnData.getChanges();
-        try {
-            this.url = new URI(addOnData.getUrl()).toURL();
-        } catch (URISyntaxException e) {
-            throw new MalformedURLException(e.getMessage());
-        }
+        this.url = new URL(addOnData.getUrl());
         this.file = new File(baseDir, addOnData.getFile());
         this.size = addOnData.getSize();
         this.notBeforeVersion = addOnData.getNotBeforeVersion();
@@ -599,7 +595,7 @@ public class AddOn {
     private URL createUrl(String url) {
         if (url != null && !url.isEmpty()) {
             try {
-                return new URI(url).toURL();
+                return new URL(url);
             } catch (Exception e) {
                 LOGGER.warn("Invalid URL for add-on \"{}\": {}", id, url, e);
             }
@@ -1042,12 +1038,76 @@ public class AddOn {
      * @return an unmodifiable {@code List} with the passive scan rules of this add-on that were
      *     loaded, never {@code null}
      * @since 2.4.3
-     * @deprecated (2.15.0) Returns an empty list always. The scan rules are loaded by the
-     *     corresponding extension.
+     * @see #setLoadedPscanrules(List)
      */
-    @Deprecated(since = "2.15.0", forRemoval = true)
     public List<PluginPassiveScanner> getLoadedPscanrules() {
-        return List.of();
+        return loadedPscanrules;
+    }
+
+    /**
+     * Sets the loaded passive scan rules of the add-on, allowing to set the status of the passive
+     * scan rules appropriately and keep track of the passive scan rules loaded so that they can be
+     * removed during uninstallation.
+     *
+     * <p><strong>Note:</strong> Helper method to be used (only) by/during (un)installation process
+     * and loading of the add-on. Should be called when installing/loading the add-on, by setting
+     * the loaded passive scan rules, and when uninstalling by setting an empty list. The method
+     * {@code setLoadedPscanrulesSet(boolean)} should also be called.
+     *
+     * @param pscanrules the passive scan rules loaded, might be empty if none were actually loaded
+     * @throws IllegalArgumentException if {@code pscanrules} is {@code null}.
+     * @since 2.4.3
+     * @see #setLoadedPscanrulesSet(boolean)
+     * @see PluginPassiveScanner#setStatus(Status)
+     */
+    void setLoadedPscanrules(List<PluginPassiveScanner> pscanrules) {
+        if (pscanrules == null) {
+            throw new IllegalArgumentException("Parameter pscanrules must not be null.");
+        }
+
+        if (pscanrules.isEmpty()) {
+            loadedPscanrules = Collections.emptyList();
+            return;
+        }
+
+        for (PluginPassiveScanner pscanrule : pscanrules) {
+            pscanrule.setStatus(getStatus());
+        }
+        loadedPscanrules = Collections.unmodifiableList(new ArrayList<>(pscanrules));
+    }
+
+    /**
+     * Tells whether or not the loaded passive scan rules of the add-on, if any, were already set to
+     * the add-on.
+     *
+     * <p><strong>Note:</strong> Helper method to be used (only) by/during (un)installation process
+     * and loading of the add-on.
+     *
+     * @return {@code true} if the loaded passive scan rules were already set, {@code false}
+     *     otherwise
+     * @since 2.4.3
+     * @see #setLoadedPscanrules(List)
+     * @see #setLoadedPscanrulesSet(boolean)
+     */
+    boolean isLoadedPscanrulesSet() {
+        return loadedPscanRulesSet;
+    }
+
+    /**
+     * Sets whether or not the loaded passive scan rules, if any, where already set to the add-on.
+     *
+     * <p><strong>Note:</strong> Helper method to be used (only) by/during (un)installation process
+     * and loading of the add-on. The method should be called, with {@code true} during
+     * installation/loading and {@code false} during uninstallation, after calling the method {@code
+     * setLoadedPscanrules(List)}.
+     *
+     * @param pscanrulesSet {@code true} if the loaded passive scan rules were already set, {@code
+     *     false} otherwise
+     * @since 2.4.3
+     * @see #setLoadedPscanrules(List)
+     */
+    void setLoadedPscanrulesSet(boolean pscanrulesSet) {
+        loadedPscanRulesSet = pscanrulesSet;
     }
 
     public List<String> getFiles() {
@@ -2224,7 +2284,7 @@ public class AddOn {
         }
 
         /**
-         * Tells whether or not the bundle data is empty.
+         * Tells whether or not the the bundle data is empty.
          *
          * <p>An empty {@code BundleData} does not contain any information to load a {@link
          * ResourceBundle}.
@@ -2279,7 +2339,7 @@ public class AddOn {
         }
 
         /**
-         * Tells whether or not the HelpSet data is empty.
+         * Tells whether or not the the HelpSet data is empty.
          *
          * <p>An empty {@code HelpSetData} does not contain any information to load the help.
          *
